Added ability for client to get history and active games from server